[package]
name = "egui_cosmic_text"
version = "0.1.1"
edition = "2021"
description = "Unofficial cosmic text widget and utilities for egui"
license = "MIT"
repository = "https://github.com/tamewild/egui_cosmic_text"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { version = "0.28", default-features = false }
cosmic-text = { git = "https://github.com/tamewild/cosmic-text.git", branch = "cursor_position" }
cosmic_undo_2 = { version = "0.2.0", optional = true, default-features = false }
etagere = "0.2.13"
imgref = "1.10.1"
lru = "0.12.3"

[dev-dependencies]
eframe = "0.28.1"
rustc-hash = "2.0.0"
arboard = "3.4.0"

[features]
default = ["widget"]
widget = ["cosmic_undo_2"]
shape-run-cache = ["cosmic-text/shape-run-cache"]

[workspace]
members = ["demo"]
resolver = "2"