[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.27.2", default-features = false, features = ["glow", "wayland", "x11"] } # Accessibility isn't supported right now.
egui_cosmic_text = { path = "..", features = ["shape-run-cache"] }
rustc-hash = "1.1.0"
egui_commonmark = { version = "0.15.0", default-features = false, features = ["pulldown_cmark"] }
fontdb = { version = "0.16.2", default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
arboard = "3.3.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
log = "0.4.21"
wasm-bindgen-futures = "0.4.42"